@@ -2,7 +2,9 @@
 title: Введение в puppet
 date: {}
 categories: work
-tags: puppet
+tags: 
+  - puppet
+  - Memory Allocation
 published: true
 ---
 ##Что такое puppet?
@@ -37,71 +39,35 @@ yum install puppet        # На клиенте (nodes)
 yum install puppet-server # На сервере (master)
 ```
 
-Однако мой опыт установки связан с тем, что т.к мне были нужны не самые свеживе версии, а програмное обеспечения версии 3.8.
-Замечу что на момент написания поста самой новой и стабильной версией является 4.8.
-Основная сложность заключается, что репозитории предлагаемом доментации эта версия отсутсвует, а на днях и вовсе была прекращена ее поддержка. Версия 3.8 была выбрана т.к эта версия все еще используется у нас на работе и много где еще, и в последствии иметь опыт обновления. Ниже прилагаю листинг действий для установки puppet'a на мастере(главный сервер):
+На момент написания поста самой новой и стабильной версией является 4.8, а  для версия 3.8 не поддерживается с конца 2016 года.
+Ниже прилагаю листинг действий для установки puppet'a на мастере(главный сервер):
 
 ```
-wget https://apt.puppetlabs.com/puppetlabs-release-precise.deb
-wget https://apt.puppetlabs.com/puppetlabs-release-pc1-precise.deb
-dpkg -i puppetlabs-release-precise.deb
-dpkg -i puppetlabs-release--pc1precise.deb
-apt-get update 
-apt-get install puppet-agent
-apt-get purge puppetlabs-release-pc1
-apt-get update
-apt-get install puppet 
-apt-get install puppetserver 
+wget https://apt.puppetlabs.com/puppetlabs-release-pc1-xenial.deb
+sudo dpkg -i puppetlabs-release-pc1-xenial.deb
+apt-g update
+apt-get install puppetserver
+
 ```
 
 вот что я в итоге получил:
 
 ```
-dpkg -l | grep puppet
-ii  facter                          2.4.6-1puppetlabs1                  Ruby module for collecting simple facts about a host operating system
-ii  hiera                           1.3.4-1puppetlabs1                  A simple pluggable Hierarchical Database.
-ii  puppet                          3.8.7-1puppetlabs1                  Centralized configuration management - agent startup and compatibility scripts
-rc  puppet-agent                    1.7.0-1precise                      The Puppet Agent package contains all of the elements needed to run puppet, including ruby, facter, hiera and mcollective.
-ii  puppet-common                   3.8.7-1puppetlabs1                  Centralized configuration management
-ii  puppetlabs-release              1.1-1                               "Package to install Puppet Labs gpg key and apt repo"
-ii  puppetserver                    1.2.0-1puppetlabs1                  Puppet Labs puppetserver
+root@puppet:~# dpkg -l | grep puppet
+ii  puppet-agent                       1.8.3-1xenial                   amd64        The Puppet Agent package contains all of the elements needed to run puppet, including ruby, facter, hiera and mcollective.
+ii  puppetlabs-release-pc1             1.1.0-2xenial                   all          Release packages for the Puppet Labs PC1 repository
+ii  puppetserver                       2.7.2-1puppetlabs1              all          Puppet Labs puppetserver
 ```
 
-В случае если получили сообщение об ошибки вида:
-
-```
-~#apt-get install puppetserver
-Reading package lists... Done
-Building dependency tree     
-Reading state information... Done
-    
-Some packages could not be installed. This may mean that you have
-requested an impossible situation or if you are using the unstable
-distribution that some required packages have not yet been created
-or been moved out of Incoming.
-
-The following information may help to resolve the situation:
-The following packages have unmet dependencies:
-
-puppetserver : Depends: puppet-common (>= 3.7.3-1puppetlabs1)
-               Depends: puppet-common (<= 4.0.0-1puppetlabs1)
-               Depends: puppet (>= 3.7.3-1puppetlabs1)
-               Depends: puppet (<= 4.0.0-1puppetlabs1)
-               
-E: Unable to correct problems, you have held broken packages.
-```
-
-То следует начать с установки puppet, а уж потом установите puppetserver, это починит необходимые зависимости.
-
-Стоит заметить что puppetserver не тянет с собой в зависимостях клиентскую часть puppet-agent. Этот пакет как раз был установлен отдельно из репозитория который был впоследствиии удален.
-
-Для установки клиенской части на отдельном хосте серверная часть не требуется. В целом установка быстра и легка.
+Для установки клиенской части(puppet-agent) на отдельном хосте серверная часть(puppetserver) не требуется. В целом установка быстра и легка.
 
 ##Ошибки с которыми я столкнулся при запуске
 
 Первый запуск произошел весьма болезненно и завершился ничем. В логах как и ожидалось - ошибка, в которой говорится о том, что для запуска JVM недостаточно памяти.
 
-По умолчанию параметр указан как
+```
+OpenJDK 64-Bit Server VM warning: ignoring option MaxPermSize=256m; support was removed in 8.0
+```
 
 ```
 2016-09-04 15:57:00,968 ERROR [async-dispatch-2] [p.t.internal] Error during service init!!!
@@ -113,7 +79,7 @@ java.lang.Error: Not enough available RAM (1,024MB) to safely accommodate the co
 
 1.Добавить памяти на сервер
 
-2.Или указать параметр `JAVA_ARGS="-Xms1g -Xmx1g -XX:MaxPermSize=256m"`  в конфиге `/etc/default/puppetserver`
+2.Или указать параметр `JAVA_ARGS="-Xms1g -Xmx1g"`  в конфиге `/etc/default/puppetserver`
 
 Согласно документации для запуска сервиса необходимо минимум 2гб озу.
 
@@ -122,42 +88,36 @@ java.lang.Error: Not enough available RAM (1,024MB) to safely accommodate the co
 Второй запуск прошел без ошибок, что подтверждает статус init скрипта:
 
 ```
-/etc/init.d/puppetserver status
-
- * puppetserver is running
+systemctl status puppetserver.service | grep active
+   Active: active (running) since Fri 2017-01-27 21:07:06 UTC; 22min ago
 ```
 
 ##Минимальные настройки мастер-сервера.
 
 ###Синзронизация времени
-Сначал я указал временную зону при помощи конфига `/etc/timezone` выбрав необходимую из [списка](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones).
-Позже я все же установил пакет tzdata
+Возможно указать  временную зону при помощи конфига `/etc/timezone` выбрав необходимую из [списка](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones).
+Либо установить пакет tzdata, если тот еще не установлен в вашей ос.
 
 ###Изменение конфига puppet
-Отредактировал /etc/puppet/puppet.conf добавив туда информация в блоках master и agent.
+Отредактировал /etc/puppet/puppet.conf добавив туда информации в блок `agent`.
 
 ```
-[main]
-logdir=/var/log/puppet
-vardir=/var/lib/puppet
-ssldir=/var/lib/puppet/ssl
-rundir=/var/run/puppet
-factpath=$vardir/lib/facter
-#templatedir=$confdir/templates
-hiera_config=/etc/puppet/hiera.yaml
-
+# This file can be used to override the default puppet settings.
+# See the following links for more details on what settings are available:
+# - https://docs.puppetlabs.com/puppet/latest/reference/config_important_settings.html
+# - https://docs.puppetlabs.com/puppet/latest/reference/config_about_settings.html
+# - https://docs.puppetlabs.com/puppet/latest/reference/config_file_main.html
+# - https://docs.puppetlabs.com/puppet/latest/reference/configuration.html
 [master]
-# These are needed when the puppetmaster is run by passenger
-# and can safely be removed if webrick is used.
-ssl_client_header = SSL_CLIENT_S_DN 
-ssl_client_verify_header = SSL_CLIENT_VERIFY
-
-dns_alt_names = puppet,puppet.tw1.su,puppetmaster,puppetmaster.tw1.su
-certname = puppet.tw1.su
+vardir = /opt/puppetlabs/server/data/puppetserver
+logdir = /var/log/puppetlabs/puppetserver
+rundir = /var/run/puppetlabs/puppetserver
+pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
+codedir = /etc/puppetlabs/code
 
 [agent]
-server = puppet.tw1.su
 enviroment = production
+server = puppet.altwhy.ru
 ```
 
 ###Указание связи имени хоста с адресом мастера
@@ -199,13 +159,6 @@ find /var/lib/puppet -type f -print0 |xargs -0r rm
 puppet agent -t
 puppet cert list
 puppet cert sign puppet.tw1.su
-```
-
-В целом после проделанных действий удалось запустить серверное приложение и запустить проверку конфигурации то вы на верном пути:
-
-```
-/etc/init.d/puppetserver status
-* puppetserver is running
 ```
 
 ```
